2001-04-26  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/unix/sysv/linux/ia64/syscalls.list: Add getunwind.

	* string/strcoll.c: Fix two memory allocation problems.
	* string/Makefile (tests): Add bug-strcoll1.
	* string/bug-strcoll1.c: New file.

	* malloc/mcheck.c (mcheck): Call malloc once before setting the
	hooks to allow the internal check hooks to be set up if necessary.

	* nis/nss-nis.h: Move yperr2nss_tab definition into separate file
	and rename to __yperr2nss_tab.  Change YPERR_COUNT into variable
	__yperr2nss_count.
	* nis/nss-nis.c: New file.
	* nis/nss-nisplus.h: Move niserr2nss_tab definition into separate file
	and rename to __niserr2nss_tab.  Change NISERR_COUNT into variable
	__niserr2nss_count.
	* nis/nss-nisplus.c: New file.
	* nis/Makefile (libnss_compat-routines): Add nss-nis.
	(libnss_nis-routines): Likewise.
	(libnss_nisplus-routines): Add nss-nisplus.

	* nis/nss_nisplus/nisplus-alias.c: Remove unnecessary initializations.
	* nis/nss_nisplus/nisplus-ethers.c: Likewise.
	* nis/nss_nisplus/nisplus-grp.c: Likewise.
	* nis/nss_nisplus/nisplus-hosts.c: Likewise.
	* nis/nss_nisplus/nisplus-network.c: Likewise.
	* nis/nss_nisplus/nisplus-proto.c: Likewise.
	* nis/nss_nisplus/nisplus-pwd.c: Likewise.
	* nis/nss_nisplus/nisplus-rpc.c: Likewise.
	* nis/nss_nisplus/nisplus-service.c: Likewise.
	* nis/nss_nisplus/nisplus-spwd.c: Likewise.
	* nis/nss_nis/nis-alias.c: Likewise.
	* nis/nss_nis/nis-ethers.c: Likewise.
	* nis/nss_nis/nis-grp.c: Likewise.
	* nis/nss_nis/nis-network.c: Likewise.
	* nis/nss_nis/nis-proto.c: Likewise.
	* nis/nss_nis/nis-pwd.c: Likewise.
	* nis/nss_nis/nis-spwd.c: Likewise.
	* nis/nss_compat/compat-grp.c: Likewise.
	* nis/nss_compat/compat-initgroups.c: Likewise.
	* nis/nss_compat/compat-pwd.c: Likewise.
	* nis/nss_compat/compat-spwd.c: Likewise.

	* sysdeps/unix/sysv/linux/sparc/sparc64/get_clockfreq.c: Some more
	optimizations.  Patch by Jakub Jelinek <jakub@redhat.com>.

2001-04-26  Andreas Jaeger  <aj@suse.de>
