@@ -1,3 +1,8 @@
+2001-04-27  Ulrich Drepper  <drepper@redhat.com>
+
+	* nis/nss-nis.h: Correct test for invalid error number.
+	* nis/nss-nisplus.h: Likewise.
+
 2001-04-26  Ulrich Drepper  <drepper@redhat.com>
 
 	* sysdeps/unix/sysv/linux/ia64/syscalls.list: Add getunwind.
